# codebin

./: .example.env  .gitignore  README.md  justfile  pyproject.toml
frontend/: package-lock.json
frontend/src/: App.js  index.css
frontend/src/components/: Snippets.js
website/: .example.env
website/code_bin/: apps.py
website/snippets/: admin.py  models.py  serializers.py  urls.py  views.py
website/snippets/migrations/: 0001_initial.py  0002_alter_snippet_options_comment_reaction.py
website/users/: admin.py  models.py  serializers.py  urls.py  views.py
website/users/migrations/: 0001_initial.py  0002_user_username.py  0003_alter_user_username.py
website/website/: settings.py  urls.py
